# Developer-Technical-Test

./: .gitignore  README.md  app.db  pyproject.toml
app/: database.py  main.py  seed_db.py
app/controllers/: task_controller.py
app/models/: task.py
app/routers/: task.py
frontend/: package-lock.json
frontend/src/: App.tsx
tests/: test_task_endpoint.py
